--- a/mysite/FutureCoder/templates/lesson_detail.html
+++ b/mysite/FutureCoder/templates/lesson_detail.html
@@ -4,6 +4,12 @@
   <p>Description: {{ lesson.description | safe}}<p>
  <iframe src="https://docs.google.com/presentation/d/{{ lesson.presentation_id }}/embed" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   <p>Duration: {{ lesson.duration }}</p>
+<h2>Lesson Details</h2>
+<p>Start Time: {{ progress.start_time }}</p>
+{% if progress.end_time %}
+    <p>End Time: {{ progress.end_time }}</p>
+{% endif %}
+
   <p>Start date: {{ lesson.start_date }}</p>
   <ul>
     {% for lesson in lesson_set.all %}
