--- a/mysite/FutureCoder/templates/enrolled_courses.html
+++ b/mysite/FutureCoder/templates/enrolled_courses.html
@@ -4,7 +4,7 @@
   <h1>Enrolled Courses</h1>
   <ul>
     {% for course in enrolled_courses %}
-      <li>{{ course.course.name }}</li>
+      <li>{{ course.name }}</li>
     {% endfor %}
   </ul>
 {% endblock %}
