--- a/mysite/FutureCoder/templates/register.html
+++ b/mysite/FutureCoder/templates/register.html
@@ -3,35 +3,35 @@
 {% block content %}
 
     <div class="container register">
-        <h3>Registracija</h3><br/>
+        <h3>Registration</h3><br/>
 
 
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="username">Vartotojo vardas</label>
+                <label for="username">User name</label>
                 <input name="username" type="text" class="form-control" id="username" aria-describedby="usernameHelp">
-                <small id="usernameHelp" class="form-text text-muted">Iki 150 simbolių.</small>
+                <small id="usernameHelp" class="form-text text-muted"> max 150 simbols.</small>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">El. paštas</label>
+                <label for="exampleInputEmail1">Email</label>
                 <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <small id="emailHelp" class="form-text text-muted">Nesidalinsime su niekuo, nesiųsime jokio spamo.
-                    Reikalingas naujam slaptažodžiui išsiųsti. </small>
+                <small id="emailHelp" class="form-text text-muted">Your safety first! Please do not share your info elswere.
+                    Request for new password has been sent. </small>
             </div>
             <div class="form-group">
-                <label for="password">Slaptažodis</label>
+                <label for="password">Password</label>
                 <input name="password" type="password" class="form-control" id="password" aria-describedby="pwdHelp">
-                <small id="pwdHelp" class="form-text text-muted">Ne mažiau, kaip 8 simboliai. Negali būti vien tik
-                    skaičiai</small>
+                <small id="pwdHelp" class="form-text text-muted">At least 8 characters. Cannot be only
+                    numbers</small>
             </div>
             <div class="form-group">
-                <label for="password2">Pakartoti slaptažodį</label>
+                <label for="password2">Repeat password</label>
                 <input name="password2" type="password" class="form-control" id="password2" aria-describedby="pwd2Help">
             </div>
-            <button type="submit" class="btn btn-primary register-button">Registruotis</button>
+            <button type="submit" class="btn btn-primary register-button">Register</button>
         </form>
-        <p>Jeigu užsiregistravote anksčiau, <a href="{% url 'login' %}?next=/library"><strong>prisijunkite.</strong></a></p>
+        <p>If you have registered before, <a href="{% url 'login' %}?next=/library"><strong>login.</strong></a></p>
     </div>
 
 {% endblock %}
