--- a/mysite/FutureCoder/templates/user_progress.html
+++ b/mysite/FutureCoder/templates/user_progress.html
@@ -6,4 +6,13 @@
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: {{ completed_percentage }}%" aria-valuenow="{{ completed_percentage }}" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
+{% for copy in book.bookinstance_set.all %} <hr>
+<p class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">
+        {{ copy.get_status_display }}
+      </p>
+{% if copy.status != 'a' %}
+<p><strong>Bus grąžinta:</strong> {{ copy.due_back }}</p>
+{% endif %}
+<p class="text-muted"><strong>Id:</strong> {{ copy.id }}</p> {% endfor %}
+  </div>
 {% endblock %}
