--- a/mysite/FutureCoder/templates/lesson_detail.html
+++ b/mysite/FutureCoder/templates/lesson_detail.html
@@ -1,19 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
+
   <h1>{{ lesson.title }}</h1>
   <p>Description: {{ lesson.description | safe}}<p>
- <iframe src="https://docs.google.com/presentation/d/{{ lesson.presentation_id }}/embed" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-  <p>Duration: {{ lesson.duration }}</p>
+ <iframe src="{{ lesson.presentation_url }}" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<p>Duration: {{ lesson.duration }}</p>
 <h2>Lesson Details</h2>
 <p>Start Time: {{ progress.start_time }}</p>
 {% if progress.end_time %}
     <p>End Time: {{ progress.end_time }}</p>
+{% else %}
+    <p>End Time: Not yet completed</p>
 {% endif %}
-
   <p>Start date: {{ lesson.start_date }}</p>
   <ul>
-    {% for lesson in lesson_set.all %}
-      <li>{{ lesson.title }}</li>
+    {% for lesson_item in lesson.lesson_set.all %}
+      <li>{{ lesson_item.title }}</li>
     {% endfor %}
   </ul>
 {% endblock %}
