--- a/mysite/FutureCoder/templates/base.html
+++ b/mysite/FutureCoder/templates/base.html
@@ -28,10 +28,12 @@
 >
     <div class="container">
         <a class="navbar-brand" href="/">
-<svg class="bi bi-laptop" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path fill-rule="evenodd" d="M13.5 3h-11a.5.5 0 0 0-.5.5V11h12V3.5a.5.5 0 0 0-.5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11z"/>
-  <path d="M0 12h16v.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5V12z"/>
-</svg>
+            <svg class="bi bi-laptop" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor"
+                 xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                      d="M13.5 3h-11a.5.5 0 0 0-.5.5V11h12V3.5a.5.5 0 0 0-.5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11z"/>
+                <path d="M0 12h16v.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5V12z"/>
+            </svg>
 
 
             FutureCoder!</a
@@ -49,12 +51,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-          <li><a href="{% url 'index' %}">Start</a></li>
-          <li><a href="{% url 'lesson_list' %}">All Lessons</a></li>
-                <li><a href="{% url 'quiz_list' %}">All Quizzes</a></li>
-                </li>
-                            {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Start</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'lesson_list' %}">All Lessons</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'quiz_list' %}">All Quizzes</a></li>
+
+                {% if user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">
                     <svg class="bi bi-person" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg">
@@ -71,9 +72,6 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
                 {% endif %}
-            </ul>
-
-
             </ul>
 
 
