--- a/mysite/FutureCoder/templates/lesson_detail.html
+++ b/mysite/FutureCoder/templates/lesson_detail.html
@@ -3,6 +3,7 @@
 
   <h1>{{ lesson.title }}</h1>
   <p>Description: {{ lesson.description | safe}}<p>
+    <div class="embed-responsive embed-responsive-1by1">
  <iframe src="https://docs.google.com/presentation/d/{{ lesson.presentation_id }}/embed" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   <p>Duration: {{ lesson.duration }}</p>
 <h2>Lesson Details</h2>
