--- a/mysite/FutureCoder/templates/quiz_detail.html
+++ b/mysite/FutureCoder/templates/quiz_detail.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h1>{{ quiz.title }}</h1>
-  <iframe src="https://docs.google.com/forms/d/{{ quiz.presentation_id }}/viewform?usp=sf_link" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-  <p>Position: {{ quiz.position }}</p>
-  <p>Image: {{ quiz.image.url }}</p>
-{% endblock %}
+<h1>{{ quiz.title }}</h1>
+<div class="embed-responsive embed-responsive-1by1">
+    <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/{{ quiz.presentation_id }}/viewform?usp=sf_link" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <p>Position: {{ quiz.position }}</p>
+</div>  <p>Image: {{ quiz.image.url }}</p>
+{% endblock %} 
