--- a/mysite/FutureCoder/templates/quiz_list.html
+++ b/mysite/FutureCoder/templates/quiz_list.html
@@ -33,7 +33,7 @@
     <a href="?page={{ page_obj.previous_page_number }}">back</a>
 {% endif %}
     <span class="current">
-        {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+        {{ page_obj.number }} {{ page_obj.paginator.num_pages }}
     </span>
 {% if page_obj.has_next %}
     <a href="?page={{ page_obj.next_page_number }}">next</a>
