--- a/mysite/FutureCoder/templates/search.html
+++ b/mysite/FutureCoder/templates/search.html
@@ -15,5 +15,8 @@
 {% else %}
   <p>No results found.</p>
 {% endif %}
-  {% endblock %}
+{% else %}
+<p>No query entered. Please enter a search query and try again.</p>
+{% endif %}
+{% endblock %}
 
